# kosmos-mm-0

./: .gitignore  README.md  create_structure_from_tree.py  gemini_pair.md  mkdocs.yml  project_structure.txt  pyproject copy.toml  pyproject.toml  requirements.txt  setup.py  tree.txt
SPACEAPPS_2025/: spaceapps2025-meteor-madness-intro-slides_KosmosTeam.pptx
docs/: data_flow copy.md  data_flow.md  index.md  project_structure.md
docs/api/: simulation.md
docs/stylesheets/: extra.css
results/: run_1.csv
scripts/: run_scenario.py  scenario_config.yml
src/kosmos_meteor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/kosmos_meteor/analysis/: population.py
src/kosmos_meteor/core/: orchestrator.py
src/kosmos_meteor/impacter/data/: neo.py
src/kosmos_meteor/impacter/impact/: compute.py
src/kosmos_meteor/impacter/orbit/: propagate.py
src/kosmos_meteor/inputs/: asteroid_properties.py  case_generator.py  orbital_parameters.py
src/kosmos_meteor/simulation/: crater_model.py  entry_model.py  entry_model_legacy_ab.py
src/kosmos_meteor/simulation/damage_models/: Impact_to_distance.py  global_effects.py  local_damage.py  tsunami.py  vulnerability_models INI.py  vulnerability_models.py
webapp/: app.py  homepage.py
webapp/pages/: 1_Orbits_Tracker.py  2_Uncertainty_Simulation.py  3_Impact_Event.py
